testdata/err/select_on_non_record.err.txt
error: type error
- testdata/err/select_on_non_record.tn:1:17
1 | main = || i32 { 1i32.field };
  |                 ^^^^^^^^^^
- testdata/err/select_on_non_record.tn:1:17
1 | main = || i32 { 1i32.field };
  |                 ^^^^ expected {field: :something} but got i32
